--- a/templates/exibir_entradas.html
+++ b/templates/exibir_entradas.html
@@ -1,12 +1,22 @@
 {% extends 'layout.html'%}
-{% block corpo %}        
-<ul>
-            {% for post in posts %}
-            <li>
-                <h2>{{posts['titulo']}}</h2>
-                {{posts['texto']}}
-            </li>
-            {% endfor %} 
-            {% block corpo%}
-            {%endblock%}
-        </ul>
+{% block corpo %}
+<form action="/inserir" method="POST" class="ins-entrada">
+    <dl>
+        <dt>Título:
+        <dd><input type="text" size="30" name="titulo">
+        <dt>Texto:
+        <dd><textarea rows="5" cols="40" name="texto"></textarea>
+        <dd><input type="submit" value="Publicar">
+    </dl>
+
+</form>
+<ul class="entradas">
+    {% for post in posts %}
+    <li>
+        <h2>{{ post['titulo'] }}</h2>
+        {{ post['texto'] }}
+    </li>
+{% endfor %}
+</ul>
+{% endblock%}
+
